# GIGGLE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  building.md  math.md  usage.md
docs/assets/: sample.root
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  FitEngine.h  FitModel.cpp  FitModel.h  FitResult.cpp  FitResult.h  FormulaValidator.h  HistogramData.h  Serialization.cpp  Serialization.h  Shapes.cpp  Shapes.h  SpectrumSource.h  Version.cpp  Version.h
src/rootbridge/: CMakeLists.txt  FormulaSupport.cpp  FormulaSupport.h  RootFileSource.cpp  RootFileSource.h  RootFitEngine.cpp  RootFitEngine.h
src/ui/: App.cpp  App.h  Fonts.cpp  Fonts.h  ImageExport.cpp  ImageExport.h  PlotExport.cpp  PlotExport.h  PlotRendering.cpp  PlotRendering.h  Theme.cpp  Theme.h  Widgets.h
src/ui/fonts/: LICENSE-CascadiaCode.txt  cascadia_bold.h  inter_regular.h  jetbrains_mono_regular.h
src/ui/panels/: FileTreePanel.cpp  FileTreePanel.h  FitModelPanel.cpp  FitModelPanel.h  PlotPanel.cpp  PlotPanel.h  ResultsPanel.cpp  ResultsPanel.h
tests/: CMakeLists.txt  core_tests.cpp  fit_engine_tests.cpp  rootbridge_tests.cpp
